# depth_segmentation

./: README.md  dependencies.rosinstall
continuous_integration/: logparser_rules  prepare-jenkins.sh
depth_segmentation/: CMakeLists.txt  image_filter.py  package.xml
depth_segmentation/cfg/: DepthSegmenter.cfg  asl_office_floor_config.yaml  menzi.yaml  menzi_depth_conversion.yaml  menzi_gsm.yaml  menzi_topics.yaml  monstah_config.yaml  monstah_facade_config.yaml  monstah_garage_config.yaml  primesense_config.yaml  primesense_topics.yaml  realsenseD415_config.yaml  realsense_camera_info.yaml  realsense_config.yaml  realsense_topics.yaml  rotors_config.yaml  rotors_ds_params.yaml  scenenet_config.yaml  scenenn_config.yaml  tango_coconut_config.yaml  tango_coconut_config_more_segments.yaml  tango_indoor_config.yaml
depth_segmentation/include/depth_segmentation/: common.h  depth_segmentation.h  ros_common.h  testing_entrypoint.h
depth_segmentation/launch/: arche.launch  depth_segmentation.launch  instance_segmentation.launch  monstah_facade_segmentation.launch  monstah_garage_segmentation.launch  monstah_indoor_segmentation.launch  semantic_depth_segmentation.launch  semantic_instance_segmentation.launch  tango_indoor_segmentation.launch
depth_segmentation/src/: depth_segmentation.cpp  depth_segmentation_node.cpp  depth_segmentation_only_node.cpp
depth_segmentation/test/: test_depth_segmentation.cpp  test_this_shit.cpp
depth_segmentation/test/data/: test_3d_points.yaml
iclcv_segmentation/: CMakeLists.txt  package.xml
iclcv_segmentation/src/: depth_segmentation_node.cpp
ssd_detection/: CMakeLists.txt  package.xml  requirements.txt  setup.py
