<?xml version="1.0"?>
<package format="2">
  <name>depth_segmentation</name>
  <version>0.0.0</version>
  <description>A package for segmentation using depth images.</description>

  <maintainer email="fadri.furrer@mavt.ethz.ch">Fadri Furrer</maintainer>
  <maintainer email="marius.fehr@mavt.ethz.ch">Marius Fehr</maintainer>
  <maintainer email="tonci.novkovic@mavt.ethz.ch">Tonci Novkovic</maintainer>

  <author email="fadri.furrer@mavt.ethz.ch">Fadri Furrer</author>
  <author email="marius.fehr@mavt.ethz.ch">Marius Fehr</author>
  <author email="tonci.novkovic@mavt.ethz.ch">Tonci Novkovic</author>
  <author email="margarita.grinvald@mavt.ethz.ch">Margarita Grinvald</author>
  <author email="abel.gawel@mavt.ethz.ch">Abel Gawel</author>
  <license>BSD 3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>image_transport</depend>
  <depend>opencv3_catkin</depend>
  <depend>pcl_catkin</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
</package>
