<?xml version="1.0"?>
<package format="2">
  <name>iclcv_segmentation</name>
  <version>0.0.0</version>
  <description>A depth_segmentation using the ICLCV library</description>

  <maintainer email="fadri.furrer@mavt.ethz.ch">Fadri Furrer</maintainer>

  <author>Fadri Furrer</author>
  <author>Tonci Novkovic</author>
  <author>Abel Gawel</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>iclcv_catkin</depend>
  <depend>pcl_catkin</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
</package>
