<?xml version="1.0"?>
<package>
  <name>iclcv_segmentation</name>
  <version>0.0.0</version>
  <description>A depth_segmentation using the ICLCV library</description>

  <maintainer email="fadri.furrer@mavt.ethz.ch">Fadri Furrer</maintainer>

  <author>Fadri Furrer</author>
  <author>Tonci Novkovic</author>
  <author>Abel Gawel</author>
  <author>Marius Fehr</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>iclcv_catkin</build_depend>
  <build_depend>opencv3_catkin</build_depend>
  <build_depend>pcl_catkin</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>iclcv_catkin</run_depend>
  <run_depend>opencv3_catkin</run_depend>
  <run_depend>pcl_catkin</run_depend>
  <run_depend>roscpp</run_depend>
</package>
