<?xml version="1.0"?>
<package>
  <name>iclcv_segmentation</name>
  <version>0.0.0</version>
  <description>A depth_segmentation using the ICLCV library</description>

  <maintainer email="fadri.furrer@mavt.ethz.ch">Fadri Furrer</maintainer>
  
  <author email="fadri.furrer@mavt.ethz.ch">Fadri Furrer</author>
  <author email="tonci.novkovic@mavt.ethz.ch">Tonci Novkovic</author>
  <author email="marius.fehr@mavt.ethz.ch">Marius Fehr</author>
  <author email="margarita.grinvald@mavt.ethz.ch">Margarita Grinvald</author>
  <author email="abel.gawel@mavt.ethz.ch">Abel Gawel</author>

  <license>BSD 3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>iclcv_catkin</build_depend>
  <build_depend>opencv3_catkin</build_depend>
  <build_depend>pcl_catkin</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>iclcv_catkin</run_depend>
  <run_depend>opencv3_catkin</run_depend>
  <run_depend>pcl_catkin</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
</package>
